--- a/source/index.html
+++ b/source/index.html
@@ -20,17 +20,17 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list main-nav__list--style">
           <li class="main-nav__item main-nav__item--style main-nav__item--active">
-            <a class="main-nav__link main-nav__link--style" href="#">
+            <a class="main-nav__link main-nav__link--style" href="index.html">
               Главная
             </a>
           </li>
           <li class="main-nav__item main-nav__item--style">
-            <a class="main-nav__link main-nav__link--style" href="#">
+            <a class="main-nav__link main-nav__link--style" href="catalog.html">
               Каталог продукции
             </a>
           </li>
           <li class="main-nav__item main-nav__item--style">
-            <a class="main-nav__link main-nav__link--style" href=" #">
+            <a class="main-nav__link main-nav__link--style" href="form.html">
               Подбор программы
             </a>
           </li>
