--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,38 +4,39 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo logo" href="#">
-        <img src="img/logo-mobile.svg" width="124" height="64" alt="Логотип">
+        <img src="img/logo-mobile.svg" width="33" height="37" alt="Логотип">
         <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
       </a>
-      <nav class="page-header__main-nav main-nav">
-        <div class="main-nav__wrapper">
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-          <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--active">
-              <a href="#">
-                Главная
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="#">
-                Каталог продукции
-              </a>
-            </li>
-            <li class="site-list__item">
-              <a href="#">
-                Подбор программы
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
     </div>
+    <nav class="page-header__main-nav main-nav">
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list main-nav__list--style">
+          <li class="main-nav__item main-nav__item--style main-nav__item--active">
+            <a class="main-nav__link main-nav__link--style" href="#">
+              Главная
+            </a>
+          </li>
+          <li class="main-nav__item main-nav__item--style">
+            <a class="main-nav__link main-nav__link--style" href="#">
+              Каталог продукции
+            </a>
+          </li>
+          <li class="main-nav__item main-nav__item--style">
+            <a class="main-nav__link main-nav__link--style" href=" #">
+              Подбор программы
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
   </header>
   <main class="page-main">
     <h1 class="page-main__title">Каталог продукции</h1>
@@ -224,48 +225,47 @@
         </ul>
       </div>
     </section>
-    <section class="page-main__present present">
-      <div class="present__wrapper">
-        <img class="additional-products__image" src="img/icon-gift.svg" width="78" height="80" alt="подарок">
-        <p class="additional-products__text">Закажите все и получите чехол для кота в подарок!</p>
-      </div>
-    </section>
     <section class="page-main__contacts contacts">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Наш адрес</h2>
-        <p class="contacts__invite">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
-        <address class="contacts__address">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</address>
-        <div class="contacts__map"></div>
-        <div class="contacts__marker"></div>
+        <p class="contacts__invite contacts__invite--style">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+        <address class="contacts__address contacts__address--style">ул. Большая<br>Конюшенная, д.
+          19/8<br>Санкт-Петербург</address>
+      </div>
+    </section>
+    <section class="page-main__location location">
+      <div class="location__wrapper">
+        <div class="location__map location__map--style"></div>
       </div>
     </section>
   </main>
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <a class="page-footer__logo logo">
+      <a class="page-footer__logo page-footer__logo--style">
         <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
       </a>
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span
-              class="visually-hidden">Мы во Вконтакте</span>
+      <ul class="page-footer__social-list page-footer__social-list--style">
+        <li class="page-footer__social-item page-footer__social-item--style">
+          <a class="page-footer__social-link page-footer__social-link--vkontakte"
+            href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы во Вконтакте</span>
             <img src="img/icon_vkontakte.svg" alt="Вконтакте">
           </a>
         </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy"><span
-              class="visually-hidden">Мы в Фейсбуке</span>
+        <li class="page-footer__social-item page-footer__social-item--style">
+          <a class="page-footer__social-link page-footer__social-link--facebook"
+            href="https://www.facebook.com/htmlacademy"><span class="visually-hidden">Мы в Фейсбуке</span>
             <img src="img/icon_facebook.svg" alt="Фейсбук">
           </a>
         </li>
-        <li class="social__item">
-          <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy"><span
-              class="visually-hidden">Мы в Инстаграме</span>
+        <li class="spage-footer__social-item page-footer__social-item--style">
+          <a class="page-footer__social-link page-footer__social-link--instagram"
+            href="https://www.instagram.com/htmlacademy"><span class="visually-hidden">Мы в Инстаграме</span>
             <img src="img/icon_instagram.svg" alt="Инстаграм">
           </a>
         </li>
       </ul>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+      <a class="page-footer__copyright page-footer__copyright--style"
+        href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
     </div>
   </footer>
 </body>
