--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="page-body">
   <header class="page-header">
     <div class="page-header__wrapper">
       <a class="page-header__logo logo" href="#">
@@ -39,7 +39,7 @@
     </nav>
   </header>
   <main class="page-main">
-    <h1 class="page-main__title">Каталог продукции</h1>
+    <h1 class="page-main__title page-main__title--style page-main__title--catalog">Каталог продукции</h1>
     <section class="page-main__basic-products basic-products">
       <div class="basic-products__wrapper">
         <h2 class="visually-hidden">Основные товары</h2>
