Стилизовал страницу каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -45,187 +45,157 @@
         <h2 class="visually-hidden">Основные товары</h2>
         <ul class="basic-products__items">
           <li class="basic-products__item">
-            <h3 class="basic-products__descpiption">CAT ENERGY PRO 500 Г</h3>
-            <table class="basic-products__list">
-              <tr>
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Курица</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>700 Р.</td>
-              </tr>
-            </table>
-            <a class="basic-products__link basic-products__link--buy" href="#">Заказать</a>
+            <div class="basic-products__item-wrapper basic-products__item-wrapper--chicken-500">
+              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 500 Г</p>
+              <dl class="basic-products__list">
+                <dt>Масса</dt>
+                <dd>500 г</dd>
+                <dt>Вкус</dt>
+                <dd>Курица</dd>
+                <dt>Цена</dt>
+                <dd>700 Р.</dd>
+              </dl>
+            </div>
+            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <h3 class="basic-products__descpiption">CAT ENERGY PRO 1000 Г</h3>
-            <table class="basic-products__list">
-              <tr>
-                <td>Масса</td>
-                <td>100 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Курица</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>100 Р.</td>
-              </tr>
-            </table>
-            <a class="basic-products__link basic-products__link--buy" href="#">Заказать</a>
+            <div class="basic-products__item-wrapper basic-products__item-wrapper--chicken-1000">
+              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 1000 Г</p>
+              <dl class="basic-products__list">
+                <dt>Масса</dt>
+                <dd>1000 г</dd>
+                <dt>Вкус</dt>
+                <dd>Курица</dd>
+                <dt>Цена</dt>
+                <dd>1000 Р.</dd>
+              </dl>
+            </div>
+            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <h3 class="basic-products__descpiption">CAT ENERGY PRO 500 Г</h3>
-            <table class="basic-products__list">
-              <tr>
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Рыба</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>700 Р.</td>
-              </tr>
-            </table>
-            <a class="basic-products__link basic-products__link--buy" href="#">Заказать</a>
+            <div class="basic-products__item-wrapper basic-products__item-wrapper--fish-500">
+              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 500 Г</p>
+              <dl class="basic-products__list">
+                <dt>Масса</dt>
+                <dd>500 г</dd>
+                <dt>Вкус</dt>
+                <dd>Рыба</dd>
+                <dt>Цена</dt>
+                <dd>700 P.</dd>
+              </dl>
+            </div>
+            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <h3 class="basic-products__descpiption">CAT ENERGY PRO 1000 Г</h3>
-            <table class="basic-products__list">
-              <tr>
-                <td>Масса</td>
-                <td>1000 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Рыба</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>1000 Р.</td>
-              </tr>
-            </table>
-            <a class="basic-products__link basic-products__link--buy" href="#">Заказать</a>
+            <div class="basic-products__item-wrapper basic-products__item-wrapper--fish-1000">
+              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 1000 Г</p>
+              <dl class="basic-products__list">
+                <dt>Масса</dt>
+                <dd>1000 г</dd>
+                <dt>Вкус</dt>
+                <dd>Рыба</dd>
+                <dt>Цена</dt>
+                <dd>1000 Р.</dd>
+              </dl>
+            </div>
+            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <h3 class="basic-products__descpiption">CAT ENERGY SLIM 500 Г</h3>
-            <table class="basic-products__list">
-              <tr>
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Гречка</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>400 Р.</td>
-              </tr>
-            </table>
-            <a class="basic-products__link basic-products__link--buy" href="#">Заказать</a>
+            <div class="basic-products__item-wrapper basic-products__item-wrapper--buckwheat-500">
+              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 500 Г</p>
+              <dl class="basic-products__list">
+                <dt>Масса</dt>
+                <dd>500 г</dd>
+                <dt>Вкус</dt>
+                <dd>Гречка</dd>
+                <dt>Цена</dt>
+                <dd>400 Р.</dd>
+              </dl>
+            </div>
+            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <h3 class="basic-products__descpiption">CAT ENERGY SLIM 1000 Г</h3>
-            <table class="basic-products__list">
-              <tr>
-                <td>Масса</td>
-                <td>1000 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Гречка</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>700 Р.</td>
-              </tr>
-            </table>
-            <a class="basic-products__link basic-products__link--buy" href="#">Заказать</a>
+            <div class="basic-products__item-wrapper basic-products__item-wrapper--buckwheat-1000">
+              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 1000 Г</p>
+              <dl class="basic-products__list">
+                <dt>Масса</dt>
+                <dd>1000 г</dd>
+                <dt>Вкус</dt>
+                <dd>Гречка</dd>
+                <dt>Цена</dt>
+                <dd>700 Р.</dd>
+              </dl>
+            </div>
+            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <h3 class="basic-products__descpiption">CAT ENERGY SLIM 500 Г</h3>
-            <table class="basic-products__list">
-              <tr>
-                <td>Масса</td>
-                <td>500 г</td>
-              </tr>
-              <tr>
-                <td>Вкус</td>
-                <td>Рис</td>
-              </tr>
-              <tr>
-                <td>Цена</td>
-                <td>500 Р.</td>
-              </tr>
-            </table>
-            <a class="basic-products__link basic-products__link--buy" href="#">Заказать</a>
+            <div class="basic-products__item-wrapper basic-products__item-wrapper--rice-500">
+              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 500 Г</p>
+              <dl class="basic-products__list">
+                <dt>Масса</dt>
+                <dd>500 г</dd>
+                <dt>Вкус</dt>
+                <dd>Рис</dd>
+                <dt>Цена</dt>
+                <dd>500 Р.</dd>
+              </dl>
+            </div>
+            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
           </li>
-          <li class="basic-products__item">
-            <h3 class="basic-products__descpiption">Показать еще 100500товаров</h3>
-            <p class="basic-products__list">На самом деле вкусов гораздо больше!</p>
-            <a class="basic-products__link basic-products--add" href="#">Показать все</a>
+          <li class="basic-products__item ">
+            <div class="basic-products__item-box">
+              <p
+                class="basic-products__description basic-products__description--style basic-products__description--more">
+                Показать еще 100500товаров</p>
+              <p class="basic-products__text basic-products__text--style">На самом деле вкусов гораздо больше!</p>
+              <a class="basic-products__link basic-products__link--style basic-products__link--more" href="#">Показать
+                все</a>
           </li>
-        </ul>
+    </section>
+    <section class="additional-products">
+      <h2 class="additional-products__title additional-products__title--style">Дополнительные товары</h2>
+      <ul class="additional-products__items">
+        <li class="additional-products__item">
+          <p class="additional-products__description">Сахарозаменитель</p>
+          <dl class="additional-products__list">
+            <dt>1 упаковка (100 г)</dt>
+            <dd>200 Р.</dd>
+          </dl>
+          <a class="additional-products__link additional-products__link--style" href="#">Заказать</a>
+        </li>
+        <li class="additional-products__item">
+          <p class="additional-products__description">Питьевая вода</p>
+          <dl class="additional-products__list">
+            <dt>5 литров</dt>
+            <dd>50 Р.</dd>
+          </dl>
+          <a class="additional-products__link additional-products__link--style" href="#">Заказать</a>
+        </li>
+        <li class="additional-products__item">
+          <p class="additional-products__description">Молоко</p>
+          <dl class="additional-products__list">
+            <dt>1 литр</dt>
+            <dd>100 Р.</dd>
+          </dl>
+          <a class="additional-products__link additional-products__link--style" href="#">Заказать</a>
+        </li>
+        <li class="additional-products__item">
+          <p class="additional-products__description">Витамины</p>
+          <dl class="additional-products__list">
+            <dt>1 упаковка (30 г)</dt>
+            <dd>300 Р.</dd>
+          </dl>
+          <a class="additional-products__link additional-products__link--style" href="#">Заказать</a>
+        </li>
+      </ul>
       </div>
     </section>
-    <section class="page-main__additional-products additional-products">
-      <div class="additional-products__wrapper">
-        <h2 class="additional-products__title">Дополнительные товары</h2>
-        <ul class="additional-products__items">
-          <li class="additional-products__item">
-            <h3 class="additional-products__description">Сахарозаменитель</h3>
-            <table class="additional-products__list">
-              <tr>
-                <td>1 упаковка (100 г)</td>
-                <td>200 Р.</td>
-              </tr>
-            </table>
-            <a class="additional-products__link additional-products__link--buy" href="#">Заказать</a>
-          </li>
-          <li class="additional-products__item">
-            <h3 class="additional-products__description">Питьевая вода</h3>
-            <table class="additional-products__list">
-              <tr>
-                <td>5 литров</td>
-                <td>50 Р.</td>
-              </tr>
-            </table>
-            <a class="additional-products__link additional-products__link--buy" href="#">Заказать</a>
-          </li>
-          <li class="additional-products__item">
-            <h3 class="additional-products__description">Молоко</h3>
-            <table class="additional-products__list">
-              <tr>
-                <td>1 литр</td>
-                <td>100 Р.</td>
-              </tr>
-            </table>
-            <a class="additional-products__link additional-products__link--buy" href="#">Заказать</a>
-          </li>
-          <li class="additional-products__item">
-            <h3 class="additional-products__description">Витамины</h3>
-            <table class="additional-products__list">
-              <tr>
-                <td>1 упаковка (30 г)</td>
-                <td>300 Р.</td>
-              </tr>
-            </table>
-            <a class="additional-products__link additional-products__link--buy" href="#">Заказать</a>
-          </li>
-        </ul>
+    <section class="present">
+      <div class="present__image present__image--style">
+        <p class="present__text present__text--style">Закажите все и получите чеход для кота в подарок!</p>
       </div>
     </section>
-    <section class="page-main__contacts contacts">
+    <section class="page-main__contacts contacts contacts--background">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Наш адрес</h2>
         <p class="contacts__invite contacts__invite--style">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
