--- a/source/form.html
+++ b/source/form.html
@@ -93,7 +93,7 @@
         </form>
       </div>
     </section>
-    <section class="page-main__contacts contacts">
+    <section class="page-main__contacts contacts contacts--background">
       <div class="contacts__wrapper">
         <h2 class="visually-hidden">Наш адрес</h2>
         <p class="contacts__invite contacts__invite--style">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
