Приступил к адаптивной верстке

--- a/source/form.html
+++ b/source/form.html
@@ -88,7 +88,7 @@
               <label for="add-vitamins">Витамины</label>
             </div>
           </fieldset>
-          <input type="submit" class="form__button form__button--style" value="Отправить заявку"></input>
+          <button type="submit" class="form__button button button--form-style">Отправить заявку</button>
           <p class="form__note">* &mdash; Обязательные поля</p>
         </form>
       </div>
@@ -103,6 +103,7 @@
     </section>
     <section class="page-main__location location">
       <div class="location__wrapper">
+        <h2 class="visually-hidden">Карта</h2>
         <div class="location__map location__map--style"></div>
       </div>
     </section>
