--- a/source/catalog.html
+++ b/source/catalog.html
@@ -45,102 +45,130 @@
         <h2 class="visually-hidden">Основные товары</h2>
         <ul class="basic-products__items">
           <li class="basic-products__item">
-            <div class="basic-products__item-wrapper basic-products__item-wrapper--chicken-500">
-              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 500 Г</p>
-              <dl class="basic-products__list">
-                <dt>Масса</dt>
-                <dd>500 г</dd>
-                <dt>Вкус</dt>
-                <dd>Курица</dd>
-                <dt>Цена</dt>
-                <dd>700 Р.</dd>
-              </dl>
+            <div class="basic-products__item-wrapper">
+              <img class="basic-products__image" src="../img/catalog_chiсken-500.png" width="68" height="86"
+                alt="Упаковка 500 грамм со вкусом курицы">
+              <div class="basic-products__description-wrapper">
+                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 500 Г</p>
+                <dl class="basic-products__list">
+                  <dt>Масса</dt>
+                  <dd>500 г</dd>
+                  <dt>Вкус</dt>
+                  <dd>Курица</dd>
+                  <dt>Цена</dt>
+                  <dd>700 Р.</dd>
+                </dl>
+              </div>
             </div>
-            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
+            <a class="basic-products__button button button--basic-products-style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <div class="basic-products__item-wrapper basic-products__item-wrapper--chicken-1000">
-              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 1000 Г</p>
-              <dl class="basic-products__list">
-                <dt>Масса</dt>
-                <dd>1000 г</dd>
-                <dt>Вкус</dt>
-                <dd>Курица</dd>
-                <dt>Цена</dt>
-                <dd>1000 Р.</dd>
-              </dl>
+            <div class="basic-products__item-wrapper">
+              <img class="basic-products__image" src="../img/catalog_chiсken-1000.png" width="84" height="100"
+                alt="Упаковка 1000 грамм со вкусом курицы">
+              <div class="basic-products__description-wrapper">
+                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 1000 Г</p>
+                <dl class="basic-products__list">
+                  <dt>Масса</dt>
+                  <dd>1000 г</dd>
+                  <dt>Вкус</dt>
+                  <dd>Курица</dd>
+                  <dt>Цена</dt>
+                  <dd>1000 Р.</dd>
+                </dl>
+              </div>
             </div>
-            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
+            <a class="basic-products__button button button--basic-products-style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <div class="basic-products__item-wrapper basic-products__item-wrapper--fish-500">
-              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 500 Г</p>
-              <dl class="basic-products__list">
-                <dt>Масса</dt>
-                <dd>500 г</dd>
-                <dt>Вкус</dt>
-                <dd>Рыба</dd>
-                <dt>Цена</dt>
-                <dd>700 P.</dd>
-              </dl>
+            <div class="basic-products__item-wrapper">
+              <img class="basic-products__image" src="../img/catalog_fish-500.png" width="68" height="86"
+                alt="Упаковка 500 грамм со вкусом рыбы">
+              <div class="basic-products__description-wrapper">
+                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 500 Г</p>
+                <dl class="basic-products__list">
+                  <dt>Масса</dt>
+                  <dd>500 г</dd>
+                  <dt>Вкус</dt>
+                  <dd>Рыба</dd>
+                  <dt>Цена</dt>
+                  <dd>700 P.</dd>
+                </dl>
+              </div>
             </div>
-            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
+            <a class="basic-products__button button button--basic-products-style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <div class="basic-products__item-wrapper basic-products__item-wrapper--fish-1000">
-              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 1000 Г</p>
-              <dl class="basic-products__list">
-                <dt>Масса</dt>
-                <dd>1000 г</dd>
-                <dt>Вкус</dt>
-                <dd>Рыба</dd>
-                <dt>Цена</dt>
-                <dd>1000 Р.</dd>
-              </dl>
+            <div class="basic-products__item-wrapper">
+              <img class="basic-products__image" src="../img/catalog_fish-1000.png" width="84" height="100"
+                alt="Упаковка 1000 грамм со вкусом рыбы">
+              <div class="basic-products__description-wrapper">
+                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>PRO 1000 Г</p>
+                <dl class="basic-products__list">
+                  <dt>Масса</dt>
+                  <dd>1000 г</dd>
+                  <dt>Вкус</dt>
+                  <dd>Рыба</dd>
+                  <dt>Цена</dt>
+                  <dd>1000 Р.</dd>
+                </dl>
+              </div>
             </div>
-            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
+            <a class="basic-products__button button button--basic-products-style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <div class="basic-products__item-wrapper basic-products__item-wrapper--buckwheat-500">
-              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 500 Г</p>
-              <dl class="basic-products__list">
-                <dt>Масса</dt>
-                <dd>500 г</dd>
-                <dt>Вкус</dt>
-                <dd>Гречка</dd>
-                <dt>Цена</dt>
-                <dd>400 Р.</dd>
-              </dl>
+            <div class="basic-products__item-wrapper">
+              <img class="basic-products__image" src="../img/catalog_buckwheat-500.png" width="68" height="86"
+                alt="Упаковка 500 грамм со вкусом гречки">
+              <div class="basic-products__description-wrapper">
+                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 500 Г</p>
+                <dl class="basic-products__list">
+                  <dt>Масса</dt>
+                  <dd>500 г</dd>
+                  <dt>Вкус</dt>
+                  <dd>Гречка</dd>
+                  <dt>Цена</dt>
+                  <dd>400 Р.</dd>
+                </dl>
+              </div>
             </div>
-            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
+            <a class="basic-products__button button button--basic-products-style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <div class="basic-products__item-wrapper basic-products__item-wrapper--buckwheat-1000">
-              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 1000 Г</p>
-              <dl class="basic-products__list">
-                <dt>Масса</dt>
-                <dd>1000 г</dd>
-                <dt>Вкус</dt>
-                <dd>Гречка</dd>
-                <dt>Цена</dt>
-                <dd>700 Р.</dd>
-              </dl>
+            <div class="basic-products__item-wrapper">
+              <img class="basic-products__image" src="../img/catalog_buckwheat-1000.png" width="84" height="100"
+                alt="Упаковка 1000 грамм со вкусом гречки">
+              <div class="basic-products__description-wrapper">
+                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 1000 Г</p>
+                <dl class="basic-products__list">
+                  <dt>Масса</dt>
+                  <dd>1000 г</dd>
+                  <dt>Вкус</dt>
+                  <dd>Гречка</dd>
+                  <dt>Цена</dt>
+                  <dd>700 Р.</dd>
+                </dl>
+              </div>
             </div>
-            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
+            <a class="basic-products__button button button--basic-products-style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item">
-            <div class="basic-products__item-wrapper basic-products__item-wrapper--rice-500">
-              <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 500 Г</p>
-              <dl class="basic-products__list">
-                <dt>Масса</dt>
-                <dd>500 г</dd>
-                <dt>Вкус</dt>
-                <dd>Рис</dd>
-                <dt>Цена</dt>
-                <dd>500 Р.</dd>
-              </dl>
+            <div class="basic-products__item-wrapper">
+              <img class="basic-products__image" src="../img/catalog_rice-500.png" width="68" height="86"
+                alt="Упаковка 500 грамм со вкусом риса">
+              <div class="basic-products__description-wrapper">
+                <p class="basic-products__description basic-products__description--style">CAT ENERGY<br>SLIM 500 Г</p>
+                <dl class="basic-products__list">
+                  <dt>Масса</dt>
+                  <dd>500 г</dd>
+                  <dt>Вкус</dt>
+                  <dd>Рис</dd>
+                  <dt>Цена</dt>
+                  <dd>500 Р.</dd>
+                </dl>
+              </div>
             </div>
-            <a class="basic-products__link basic-products__link--style" href="#">Заказать</a>
+            <a class="basic-products__button button button--basic-products-style" href="#">Заказать</a>
           </li>
           <li class="basic-products__item ">
             <div class="basic-products__item-box">
@@ -148,7 +176,8 @@
                 class="basic-products__description basic-products__description--style basic-products__description--more">
                 Показать еще 100500товаров</p>
               <p class="basic-products__text basic-products__text--style">На самом деле вкусов гораздо больше!</p>
-              <a class="basic-products__link basic-products__link--style basic-products__link--more" href="#">Показать
+              <a class="basic-products__button button button--basic-products-style button--basic-products-more"
+                href="#">Показать
                 все</a>
           </li>
     </section>
@@ -161,7 +190,7 @@
             <dt>1 упаковка (100 г)</dt>
             <dd>200 Р.</dd>
           </dl>
-          <a class="additional-products__link additional-products__link--style" href="#">Заказать</a>
+          <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
         </li>
         <li class="additional-products__item">
           <p class="additional-products__description">Питьевая вода</p>
@@ -169,7 +198,7 @@
             <dt>5 литров</dt>
             <dd>50 Р.</dd>
           </dl>
-          <a class="additional-products__link additional-products__link--style" href="#">Заказать</a>
+          <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
         </li>
         <li class="additional-products__item">
           <p class="additional-products__description">Молоко</p>
@@ -177,7 +206,7 @@
             <dt>1 литр</dt>
             <dd>100 Р.</dd>
           </dl>
-          <a class="additional-products__link additional-products__link--style" href="#">Заказать</a>
+          <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
         </li>
         <li class="additional-products__item">
           <p class="additional-products__description">Витамины</p>
@@ -185,15 +214,18 @@
             <dt>1 упаковка (30 г)</dt>
             <dd>300 Р.</dd>
           </dl>
-          <a class="additional-products__link additional-products__link--style" href="#">Заказать</a>
+          <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
         </li>
       </ul>
       </div>
     </section>
     <section class="present">
+      <div class="present-wrapper">
+        <h2 class="visually-hidden">Подарок</h2>
       <div class="present__image present__image--style">
         <p class="present__text present__text--style">Закажите все и получите чеход для кота в подарок!</p>
       </div>
+    </div>
     </section>
     <section class="page-main__contacts contacts contacts--background">
       <div class="contacts__wrapper">
@@ -204,6 +236,7 @@
       </div>
     </section>
     <section class="page-main__location location">
+      <h2 class="visually-hidden">Карта</h2>
       <div class="location__wrapper">
         <div class="location__map location__map--style"></div>
       </div>
