--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -44,8 +45,9 @@
         <h1 class="page-main__title page-main__title--style">Функциональное питание для котов</h1>
         <h2 class="visually-hidden">Выбор программы</h2>
         <p class="promo__slogan promo__slogan--style">Занялся собой? Займись котом!</p>
+        <img class="promo__image" src="../img/index-can-mobile-1.png" width="280" height="270" alt="Кэт Энерджи Про">
       </div>
-      <a class="promo__link promo__link--style" href="form.html">Подобрать программу</a>
+      <a class="promo__button button button--promo-style" href="form.html">Подобрать программу</a>
     </section>
     <section class="page-main__program program">
       <div class="program__wrapper">
@@ -147,6 +149,7 @@
     </section>
     <section class="page-main__location location">
       <div class="location__wrapper">
+        <h2 class="visually-hidden">Карта</h2>
         <div class="location__map location__map--style"></div>
       </div>
     </section>
