--- a/source/index.html
+++ b/source/index.html
@@ -10,34 +10,36 @@
 
 <body class="page-body">
   <header class="page-header">
-    <div class="page-header__wrapper">
-      <a class="page-header__logo logo" href="#">
-        <img src="img/logo-mobile.svg" width="33" height="37" alt="Логотип">
-        <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
-      </a>
-      <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-    </div>
-    <nav class="page-header__main-nav main-nav">
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list main-nav__list--style">
-          <li class="main-nav__item main-nav__item--style main-nav__item--active">
-            <a class="main-nav__link main-nav__link--style" href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item main-nav__item--style">
-            <a class="main-nav__link main-nav__link--style" href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="main-nav__item main-nav__item--style">
-            <a class="main-nav__link main-nav__link--style" href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
+    <div class="page-header__container">
+      <div class="page-header__wrapper">
+        <a class="page-header__logo logo" href="#">
+          <img src="img/logo-mobile.svg" width="33" height="37" alt="Логотип">
+          <img src="img/logo-mobile-text.svg" width="101" height="18" alt="Кэт Энерджи">
+        </a>
+        <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
-    </nav>
+      <nav class="page-header__main-nav main-nav">
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list main-nav__list--style">
+            <li class="main-nav__item main-nav__item--style main-nav__item--active">
+              <a class="main-nav__link main-nav__link--style" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="main-nav__item main-nav__item--style">
+              <a class="main-nav__link main-nav__link--style" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="main-nav__item main-nav__item--style">
+              <a class="main-nav__link main-nav__link--style" href="form.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
   <main class="page-main">
     <section class="page-main__promo promo">
@@ -46,8 +48,8 @@
         <h2 class="visually-hidden">Выбор программы</h2>
         <p class="promo__slogan promo__slogan--style">Занялся собой? Займись котом!</p>
         <img class="promo__image" src="../img/index-can-mobile-1.png" width="280" height="270" alt="Кэт Энерджи Про">
+        <a class="promo__button button button--promo-style" href="form.html">Подобрать программу</a>
       </div>
-      <a class="promo__button button button--promo-style" href="form.html">Подобрать программу</a>
     </section>
     <section class="page-main__program program">
       <div class="program__wrapper">
@@ -109,17 +111,19 @@
           свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
           При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
-        <ul class="example__list">
-          <li class="example__item example__item--style">
-            <p class="example__value example__value--style">5 кг</dt>
-            <p class="example__description example__description--style">Снижение веса</dd>
-          </li>
-          <li class="example__item example__item--style">
-            <p class="example__value example__value--style">60 дней</p>
-            <p class="example__description example__description--style">Затрачено времени</p>
-          </li>
-        </ul>
-        <p class="example__price example__price--style">Затраты на питание: 15 000 руб.</p>
+        <div class="example__container">
+          <ul class="example__list">
+            <li class="example__item example__item--style">
+              <p class="example__value example__value--style">5 кг</dt>
+              <p class="example__description example__description--style">Снижение веса</dd>
+            </li>
+            <li class="example__item example__item--style">
+              <p class="example__value example__value--style">60 дней</p>
+              <p class="example__description example__description--style">Затрачено времени</p>
+            </li>
+          </ul>
+          <p class="example__price example__price--style">Затраты на питание: 15 000 руб.</p>
+        </div>
         <div class="example__slider">
           <ul class="example__slider-list">
             <li class="example__slide example__slide--style example__slide--before">
