Планшетная и десктопная верстка главной страницы

--- a/source/form.html
+++ b/source/form.html
@@ -91,8 +91,10 @@
               <label for="add-vitamins">Витамины</label>
             </div>
           </fieldset>
-          <button type="submit" class="form__button button button--form-style">Отправить заявку</button>
-          <p class="form__note">* &mdash; Обязательные поля</p>
+          <div class="form__note-wrapper">
+            <button type="submit" class="form__button button button--form-style">Отправить заявку</button>
+            <p class="form__note">* &mdash; Обязательные поля</p>
+          </div>
         </form>
       </div>
     </section>
