--- a/source/catalog.html
+++ b/source/catalog.html
@@ -185,50 +185,51 @@
           </li>
     </section>
     <section class="additional-products">
-      <h2 class="additional-products__title additional-products__title--style">Дополнительные товары</h2>
-      <ul class="additional-products__items">
-        <li class="additional-products__item">
-          <p class="additional-products__description">Сахарозаменитель</p>
-          <dl class="additional-products__list">
-            <dt>1 упаковка (100 г)</dt>
-            <dd>200 Р.</dd>
-          </dl>
-          <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
-        </li>
-        <li class="additional-products__item">
-          <p class="additional-products__description">Питьевая вода</p>
-          <dl class="additional-products__list">
-            <dt>5 литров</dt>
-            <dd>50 Р.</dd>
-          </dl>
-          <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
-        </li>
-        <li class="additional-products__item">
-          <p class="additional-products__description">Молоко</p>
-          <dl class="additional-products__list">
-            <dt>1 литр</dt>
-            <dd>100 Р.</dd>
-          </dl>
-          <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
-        </li>
-        <li class="additional-products__item">
-          <p class="additional-products__description">Витамины</p>
-          <dl class="additional-products__list">
-            <dt>1 упаковка (30 г)</dt>
-            <dd>300 Р.</dd>
-          </dl>
-          <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
-        </li>
-      </ul>
+      <div class="additional-products__wrapper">
+        <h2 class="additional-products__title additional-products__title--style">Дополнительные товары</h2>
+        <ul class="additional-products__items">
+          <li class="additional-products__item">
+            <p class="additional-products__description">Сахарозаменитель</p>
+            <dl class="additional-products__list">
+              <dt>1 упаковка (100 г)</dt>
+              <dd>200 Р.</dd>
+            </dl>
+            <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
+          </li>
+          <li class="additional-products__item">
+            <p class="additional-products__description">Питьевая вода</p>
+            <dl class="additional-products__list">
+              <dt>5 литров</dt>
+              <dd>50 Р.</dd>
+            </dl>
+            <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
+          </li>
+          <li class="additional-products__item">
+            <p class="additional-products__description">Молоко</p>
+            <dl class="additional-products__list">
+              <dt>1 литр</dt>
+              <dd>100 Р.</dd>
+            </dl>
+            <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
+          </li>
+          <li class="additional-products__item">
+            <p class="additional-products__description">Витамины</p>
+            <dl class="additional-products__list">
+              <dt>1 упаковка (30 г)</dt>
+              <dd>300 Р.</dd>
+            </dl>
+            <a class="additional-products__button button button--additional-products-style" href="#">Заказать</a>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="present">
       <div class="present-wrapper">
         <h2 class="visually-hidden">Подарок</h2>
-      <div class="present__image present__image--style">
-        <p class="present__text present__text--style">Закажите все и получите чеход для кота в подарок!</p>
+        <div class="present__image present__image--style">
+          <p class="present__text present__text--style">Закажите все и получите чеход для кота в подарок!</p>
+        </div>
       </div>
-    </div>
     </section>
     <section class="page-main__contacts contacts contacts--background">
       <div class="contacts__wrapper">
