--- a/source/index.html
+++ b/source/index.html
@@ -56,17 +56,17 @@
         <ul class="program__list">
           <li class="program__item program__item--style">
             <h3 class="program__title program__title--style program__title--slim">Похудение</h3>
-            <p class="program__description program__description--style">Ваш кот весит больше собаки и<br>
-              почти утратил способность лазить<br>по деревьям? Пора на диету! Cat<br>
-              Energy Slim поможет вашему<br>питомцу сбросить лишний вес.
+            <p class="program__description program__description--style program__description--slim">Ваш кот весит больше
+              собаки и почти утратил
+              способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
             </p>
             <a class="program__link program__link--style" href="catalog.html">Каталог Slim</a>
           </li>
           <li class="program__item program__item--style">
             <h3 class="program__title program__title--style program__title--pro">Набор массы</h3>
-            <p class="program__description program__description--style">Заработать авторитет среди<br>
-              дворовых котов и даже собак?<br>Серия Cat Energy Pro поможет<br>вашему коту нарастить<br>
-              необходимые мышцы.
+            <p class="program__description program__description--style program__description--pro">Заработать авторитет
+              среди дворовых котов
+              и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы.
             </p>
             <a class="program__link program__link--style" href="catalog.html">Каталог Pro</a>
           </li>
@@ -103,42 +103,48 @@
     </section>
     <section class="page-main__example example">
       <div class="example__wrapper">
-        <header class="example__header">
-          <h2 class="visually-hidden">Результат программы</h2>
-          <p class="example__subtitle example__subtitle--style">Живой пример</p>
-        </header>
-        <p class="example__text example__text--style">Борис сбросил 5 кг за 2 месяца, просто заменив
-          свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
-          При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <div class="example__container">
-          <ul class="example__list">
-            <li class="example__item example__item--style">
-              <p class="example__value example__value--style">5 кг</dt>
-              <p class="example__description example__description--style">Снижение веса</dd>
-            </li>
-            <li class="example__item example__item--style">
-              <p class="example__value example__value--style">60 дней</p>
-              <p class="example__description example__description--style">Затрачено времени</p>
-            </li>
-          </ul>
-          <p class="example__price example__price--style">Затраты на питание: 15 000 руб.</p>
-        </div>
-        <div class="example__slider">
-          <ul class="example__slider-list">
-            <li class="example__slide example__slide--style example__slide--before">
-              <img src="../img/mobile_fat-cat.png" width="311" height="232" alt="Толстый кот">
-            </li>
-            <li class="example__slide example__slide--style example__slide--after">
-              <img src="../img/mobile_gracile-cat.png" width="251" height="240" alt="Изящный кот">
-            </li>
-          </ul>
-          <div class="example__control example__control--style">
-            <p class="example__control--before">Было</p>
-            <div class="example__scale example__scale--style">
-              <div class="example__bar example__bar--style"></div>
+        <div class="example__desktop-wrapper">
+          <div class="example__desktop-container-1">
+            <header class="example__header">
+              <h2 class="visually-hidden">Результат программы</h2>
+              <p class="example__subtitle example__subtitle--style">Живой пример</p>
+            </header>
+            <p class="example__text example__text--style">Борис сбросил 5 кг за 2 месяца, просто заменив
+              свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок!
+              При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <div class="example__container">
+              <ul class="example__list">
+                <li class="example__item example__item--style">
+                  <p class="example__value example__value--style">5 кг</dt>
+                  <p class="example__description example__description--style">Снижение веса</dd>
+                </li>
+                <li class="example__item example__item--style">
+                  <p class="example__value example__value--style">60 дней</p>
+                  <p class="example__description example__description--style">Затрачено времени</p>
+                </li>
+              </ul>
+              <p class="example__price example__price--style">Затраты на питание: 15 000 руб.</p>
             </div>
-            <p class="example__control--after">Стало</p>
+          </div>
+          <div class="example__desktop-container-2">
+            <div class="example__slider">
+              <ul class="example__slider-list">
+                <li class="example__slide example__slide--style example__slide--before">
+                  <img src="../img/mobile_fat-cat.png" width="311" height="232" alt="Толстый кот">
+                </li>
+                <li class="example__slide example__slide--style example__slide--after">
+                  <img src="../img/mobile_gracile-cat.png" width="251" height="240" alt="Изящный кот">
+                </li>
+              </ul>
+              <div class="example__control example__control--style">
+                <p class="example__control--before">Было</p>
+                <div class="example__scale example__scale--style">
+                  <div class="example__bar example__bar--style"></div>
+                </div>
+                <p class="example__control--after">Стало</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
